tests/invalidTest/test_1.q
# EXPECT Error:type cannot be converted
def uint16 test(){
     uint32 var0 = -9     #def & constant num
  return 0
}

